# learning

./: .gitignore  AlignmentTesting.h  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CommonTools.txt  ConceptsAndViews.h  ConstTesting.h  Doxyfile  Main.cpp  Makefile  PerfectForwarding.h  README.md  ReadMe.docx  ViewTesting.h  cmake_install.cmake
BACpypes_AWS/: .env  BACpypes.ini  BACpypesClient.ini  examples.txt  startingAWS.txt
BACpypes_AWS/AWS/: AWS_Client.py  AWS_EventLogVariables.py  AWS_Objects.py  AWS_ReadProperty.py  AWS_Server.py  AWS_Variables.py  AWS_WriteProperty.py
BACpypes_AWS/py34/bacpypes/: basetypes.py  object.py
Encryption/: SSLTest.h
Examples/: Initialization.cpp  Initialization.h  MoveSemantics.cpp  MoveSemantics.h
FactoryPattern/General/: Circle.h  Polygon.h  Rectangle.h  Shape.h  ShapeCreator.cpp  ShapeCreator.h  Sphere.h  TemplatedCreator.h  Triangle.h
Server/: Main.cpp  Makefile
Server/include/: Networking.h
Server/src/: Networking.cpp
Templates/: PerfectForwarding.h  Variadic.h
Threading/: Subscriber.h  SubscriptionManager.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h
Webpage/: BACnet.html  BPI.html  MainTestPage.html  Networking.html  ObjectTypes.html  main.js  mystyle.css
Webpage/Stylesheets/: mystyle.css  networking.css
Webpage/javascript/: BACnetObjects.js  BACnetValues.js  main.js  networking.js
